# Adon

./: .gitignore  PyObj.txt  README.md  dump.py  load.py  pyproject.toml  test.py
src/: __init__.py  __main__.py
src/adon/: __init__.py  __main__.py  adon.py  dump.py  load.py
